--- a/css/app.css
+++ b/css/app.css
@@ -6,39 +6,35 @@
     background-size: 100%;
 }
 #landing {
-    background-image: url(../img/me.jpg);
+    background-image: url(../img/IMG_3959.jpg);
     height: 100%;
     width: 100%;
     background-repeat: no-repeat;
     background-size: 100%;
     text-align: center;
+    margin: 0 auto;
     background-attachment: fixed;
-    ;
-    margin-right: inherit;
 }
 .skills {
     height: 70%;
     width: 100%;
     text-align: center;
-    background-color: black;
-    color: white;
 }
 .contacts {
-    height: 50%;
-    max-width: 1350px;
-    background-color: black;
+    height: 100%;
+    width: 100%;
+    background-color: white;
     text-align: center;
-    color: white;
 }
 .portfolio {
-    height: 60%;
+    height: 50%;
     background-color: white;
     width: 100%;
     text-align: center;
     background-image: url(../img/portfolio2.jpg);
     background-repeat: no-repeat;
     background-position: center;
-    padding-top: 5%;
+    background-blend-mode: hard-light;
 }
 .overlay {
     height: 100%;
@@ -154,7 +150,6 @@ h1 {
 }
 .row {
     max-width: 1350px;
-    text-align: center;
 }
 .more:link,
 .more:visited {
@@ -604,27 +599,86 @@ body {
     /*    text-align: center;*/
 }
 
-/*
-h2 {
-  color: #333;
-  font-size: 45px;
-  margin: 32px;
-}
-*/
+/*added css to contact form*/
 
-.form {
-    height: 50%;
+$green: #84AD47;
+$red: #AD4747;
+$blue: #4784AD;
+form {
     width: 100%;
-    background-color: black;
-    color: white;
-    text-align: center;
+    margin: 10% auto;
+    min-width: 9rem;
+}
+input,
+textarea {
+    float: left;
+    width: 100%;
+    max-width: 100%;
+    border: none;
+    margin: 0.5rem 0;
+    padding: 0.5rem 1rem;
+    border-radius: 0.3rem;
+    background: darken(#f9f9f9, 10%);
+    color: darken(#f9f9f9, 50%);
+    &[type=submit] {
+        background: $green;
+        color: #fff;
+        width: auto;
+        float: right;
+    }
+    &::placeholder {
+        color: darken(#f9f9f9, 50%);
+    }
+    &.error {
+        background: $red;
+        color: #fff;
+        &::placeholder {
+            color: darken($red, 60%);
+        }
+    }
+}
+textarea {
+    height: 10rem;
+}
+.captcha {
+    float: left;
+    input {
+        float: right;
+    }
+    input[name=question] {
+        width: 4rem;
+        border-top-right-radius: 0;
+        border-bottom-right-radius: 0;
+        text-align: right;
+        padding-right: 0;
+    }
+    [name=captcha] {
+        width: 5rem;
+        border-top-left-radius: 0;
+        border-bottom-left-radius: 0;
+        padding-left: 0.5rem;
+        &::placeholder {
+            text-align: center;
+        }
+    }
+}
+// Generic Styles ;)
+* {
+    box-sizing: border-box;
+}
+@font-face {
+    font-family: 'Open Sans';
+    font-style: normal;
+    font-weight: 400;
+    src: local('Open Sans'), local('OpenSans'), url(http://themes.googleusercontent.com/static/fonts/opensans/v7/cJZKeOuBrn4kERxqtaUH3bO3LdcAZYWl9Si6vvxL-qU.woff) format('woff');
+}
+body {
+    /*    padding: 2rem;*/
+    /*  background: #f9f9f9;*/
+    /*  color: #2f2f2f;*/
+    /*  font-family: 'Open Sans';*/
 }
 
-.profile li {
-   display: inline-block;
-
-}
-
-#contact {
-    width:50%;
+.profile {
+    
 }
