--- a/css/app.css
+++ b/css/app.css
@@ -36,6 +36,7 @@
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
+    align-content: center;
 }
 .portfolio {
     height: 50%;
@@ -690,3 +691,11 @@ body {
     /*  font-family: 'Open Sans';*/
 }
 .profile {}
+
+.footer {
+    height:20%;
+    width:100%;
+    background-color: black;
+    color:white;
+    
+}
