--- a/css/app.css
+++ b/css/app.css
@@ -19,24 +19,29 @@
     height: 70%;
     width: 100%;
     text-align: center;
-    background-image: url(../img/IMG_0701.jpg);
+    /*    background-image: url(../img/IMG_0701.jpg);*/
+    /*
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
-    color: white;
-    background-attachment: fixed;
+    background-size: cover;
+*/
+    color: black;
+    /*    background-attachment: fixed;*/
 }
 .contacts {
     height: 100%;
     width: 100%;
     background-color: white;
     text-align: center;
+    /*
     background-image: url(../img/cup.jpg);
     background-attachment: fixed;
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
     align-content: center;
+*/
 }
 .portfolio {
     height: 70%;
@@ -691,99 +696,155 @@ body {
     /*  font-family: 'Open Sans';*/
 }
 .profile {}
-
 .footer {
-    height:20%;
-    width:100%;
+    height: 15%;
+    width: 100%;
     background-color: black;
-    color:white;
-    
+    color: white;
 }
-
 
 /*portfolio on hover*/
 
 figure.snip1524 {
-  font-family: 'Josefin Sans', sans-serif;
-  position: relative;
-  float: left;
-  overflow: hidden;
-  margin: 10px 1%;
-  min-width: 230px;
-  max-width: 315px;
-  width: 100%;
-  color: #ffffff;
-  text-align: center;
-  font-size: 16px;
-  background-color: #000000;
+    font-family: 'Josefin Sans', sans-serif;
+    position: relative;
+    float: left;
+    overflow: hidden;
+    margin: 10px 1%;
+    min-width: 230px;
+    max-width: 315px;
+    width: 100%;
+    color: #ffffff;
+    text-align: center;
+    font-size: 16px;
+    background-color: #000000;
 }
-
 figure.snip1524 * {
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-  -webkit-transition: all 0.45s ease;
-  transition: all 0.45s ease;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    -webkit-transition: all 0.45s ease;
+    transition: all 0.45s ease;
 }
-
 figure.snip1524 img {
-  vertical-align: top;
-  max-width: 100%;
-  backface-visibility: hidden;
+    vertical-align: top;
+    max-width: 100%;
+    backface-visibility: hidden;
 }
-
 figure.snip1524 figcaption {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  z-index: 1;
-  padding: 30px;
-  background-color: rgba(0, 0, 0, 0.75);
-  border: 4px solid rgba(255, 255, 255, 0.05);
-  -webkit-transform: rotate(90deg);
-  transform: rotate(90deg);
-  -webkit-transform-origin: 0 0%;
-  -ms-transform-origin: 0 0%;
-  transform-origin: 0 0%;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: 1;
+    padding: 30px;
+    background-color: rgba(0, 0, 0, 0.75);
+    border: 4px solid rgba(255, 255, 255, 0.05);
+    -webkit-transform: rotate(90deg);
+    transform: rotate(90deg);
+    -webkit-transform-origin: 0 0%;
+    -ms-transform-origin: 0 0%;
+    transform-origin: 0 0%;
 }
-
 figure.snip1524 h2,
 figure.snip1524 p {
-  line-height: 1.5em;
-  margin: 0;
+    line-height: 1.5em;
+    margin: 0;
 }
-
 figure.snip1524 h2 {
-  font-family: 'Cardo', serif;
-  display: inline-block;
-  border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+    font-family: 'Cardo', serif;
+    display: inline-block;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.2);
 }
-
 figure.snip1524 p {
-  padding: 8px 0 15px;
+    padding: 8px 0 15px;
 }
-
 figure.snip1524 a {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  z-index: 1;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: 1;
 }
-
 figure.snip1524:hover > img,
 figure.snip1524.hover > img {
-  opacity: 0.2;
+    opacity: 0.2;
 }
-
 figure.snip1524:hover figcaption,
 figure.snip1524.hover figcaption {
-  -webkit-transform-origin: 100% 100%;
-  -ms-transform-origin: 100% 100%;
-  transform-origin: 100% 100%;
-  -webkit-transform: rotate(0);
-  transform: rotate(0);
+    -webkit-transform-origin: 100% 100%;
+    -ms-transform-origin: 100% 100%;
+    transform-origin: 100% 100%;
+    -webkit-transform: rotate(0);
+    transform: rotate(0);
 }
 
+/*contact form */
+
+form {
+    width: 50%;
+    margin: 10% auto;
+    min-width: 9rem;
+}
+input,
+textarea {
+    float: left;
+    width: 100%;
+    max-width: 100%;
+    border: none;
+    margin: 0.5rem 0;
+    padding: 0.5rem 1rem;
+    border-radius: 0.3rem;
+    background: darken(#f9f9f9, 10%);
+    color: darken(#f9f9f9, 50%);
+    &[type=submit] {
+        background: $green;
+        color: #fff;
+        width: auto;
+        float: right;
+    }
+    &::placeholder {
+        color: darken(#f9f9f9, 50%);
+    }
+    &.error {
+        background: $red;
+        color: #fff;
+        &::placeholder {
+            color: darken($red, 60%);
+        }
+    }
+}
+textarea {
+    height: 10rem;
+}
+
+/*
+.captcha {
+    float: left;
+    input {
+        float: right;
+    }
+    input[name=question] {
+        width: 4rem;
+        border-top-right-radius: 0;
+        border-bottom-right-radius: 0;
+        text-align: right;
+        padding-right: 0;
+    }
+    [name=captcha] {
+        width: 5rem;
+        border-top-left-radius: 0;
+        border-bottom-left-radius: 0;
+        padding-left: 0.5rem;
+        &::placeholder {
+            text-align: center;
+        }
+    }
+}
+*/
+
+// Generic Styles ;)
+* {
+    box-sizing: border-box;
+}
