--- a/css/app.css
+++ b/css/app.css
@@ -60,7 +60,9 @@
     opacity: 0.7;
     color: white;
 }
-.hey {}
+.hey {
+    
+}
 .pulse {
     -webkit-animation-name: pulse;
     animation-name: pulse;
@@ -718,6 +720,7 @@ figure.snip1524 {
     text-align: center;
     font-size: 16px;
     background-color: #000000;
+    margin-left: 10%;
 }
 figure.snip1524 * {
     -webkit-box-sizing: border-box;
@@ -847,4 +850,12 @@ textarea {
 // Generic Styles ;)
 * {
     box-sizing: border-box;
+}
+
+.intro {
+    margin-top: 5%;
+}
+
+.leftportfolio {
+    margin-left: 2%;
 }
