removed unused images

--- a/css/app.css
+++ b/css/app.css
@@ -6,7 +6,7 @@
     background-size: 100%;
 }
 #landing {
-    background-image: url(../img/IMG_3959.jpg);
+    background-image: url(../img/arvid.jpg);
     height: 100%;
     max-width: 1350px;
     background-repeat: no-repeat;
