--- a/css/app.css
+++ b/css/app.css
@@ -1,4 +1,37 @@
 .container {
+    /* background-image: url(../img/white3.jpg);*/
+    height: 100%;
+    max-width: 1450px;
+    background-repeat: no-repeat;
+    background-size: 100%;
+}
+#landing {
+    background-image: url(../img/arvid.jpg);
+    height: 100%;
+    max-width: 1350px;
+    background-repeat: no-repeat;
+    background-size: 100%;
+    text-align: center;
+    margin: 0 auto;
+    background-attachment: fixed;
+    margin-right: 0;
+}
+.skills {
+    height: 70%;
+    width: 100%;
+    text-align: center;
+    /* background-image: url(../img/IMG_0701.jpg);*/
+    /* background-repeat: no-repeat; background-position: center; background-size: cover; background-size: cover; */
+    color: black;
+    /* background-attachment: fixed;*/
+}
+.contacts {
+    height: 100%;
+    width: 100%;
+    background-color: dimgrey;
+    text-align: center;
+    margin-top: 5%;
+    /* b.container {
     /*  background-image: url(../img/white3.jpg);*/
     height: 100%;
     max-width: 1450px;
@@ -723,9 +756,8 @@ figure.snip1524.hover figcaption {
     -webkit-transform: rotate(0);
     transform: rotate(0);
 }
-
 .portfolio2 {
-     height: 50%;
+    height: 50%;
     background-color: white;
     width: 100%;
     text-align: center;
@@ -734,7 +766,91 @@ figure.snip1524.hover figcaption {
     background-position: center;
     margin-top: 5%;
 }
-
 .tweet {
     margin-right: 0;
+}
+link {
+    color: black;
+}
+ackground-image: url(../img/cup.jpg);
+background-attachment: fixed;
+background-repeat: no-repeat;
+background-position: center;
+background-size: cover;
+align-content: center;
+*/
+}
+.portfolio {
+    height: 50%;
+    background-color: white;
+    width: 100%;
+    text-align: center;
+    background-image: url(../img/portfolio2.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    margin-top: 5%;
+}
+.overlay {
+    height: 100%;
+    width: 100%;
+    background-color: black;
+    opacity: 0.7;
+    color: white;
+}
+.hey {}
+
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    font-family: 'Rock Salt',
+    cursive;
+}
+@import url(http://fonts.googleapis.com/css?family=Francois+One);
+* {
+    box-sizing: border-box;
+}
+body {
+    font-family: "Francois One";
+    background-image: url(http://subtlepatterns.subtlepatterns.netdna-cdn.com/patterns/cream_dust.png)
+}
+.wrap {
+    width: 87%;
+    margin: auto;
+    padding: 0 10px;
+    background-color: rgba(255,
+    255,
+    255,
+    0.9);
+    overflow: hidden;
+    box-shadow: 0 0 5px #eee;
+}
+img {
+    max-width: 100%;
+    height: auto;
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    letter-spacing: 0.05em;
+    font-weight: 400;
+}
+h1 {
+    text-align: center;
+}
+.row {
+    max-width: 1350px;
+}
+
+/*media query*/
+@media screen and (max-width:400px) {
+    h1 {
+        font-size: 10px;
+    }
 }
