added portfolio stuff

--- a/css/app.css
+++ b/css/app.css
@@ -761,7 +761,7 @@ figure.snip1524.hover figcaption {
     background-color: white;
     width: 100%;
     text-align: center;
-    background-image: url(../img/portfolio2.jpg);
+/*    background-image: url(../img/portfolio2.jpg);*/
     background-repeat: no-repeat;
     background-position: center;
     margin-top: 5%;
