--- a/css/app.css
+++ b/css/app.css
@@ -26,7 +26,7 @@
     /* background-attachment: fixed;*/
 }
 .contacts {
-    height: 100%;
+    height: 50%;
     width: 100%;
     background-color: dimgrey;
     text-align: center;
@@ -37,6 +37,7 @@
     max-width: 1450px;
     background-repeat: no-repeat;
     background-size: 100%;
+  
 }
 #landing {
     background-image: url(../img/arvid.jpg);
@@ -853,4 +854,25 @@ h1 {
     h1 {
         font-size: 10px;
     }
+}
+
+.buttonform {
+    width:100px;
+    background-color: black;
+    color:white;
+}
+
+.form1 {
+    padding-top: 30px;
+}
+
+.portfolio3 {
+     height: 50%;
+    background-color: white;
+    width: 100%;
+    text-align: center;
+/*    background-image: url(../img/portfolio2.jpg);*/
+    background-repeat: no-repeat;
+    background-position: center;
+    margin-top: 5%;
 }
