--- a/css/app.css
+++ b/css/app.css
@@ -26,18 +26,16 @@
     /* background-attachment: fixed;*/
 }
 .contacts {
-    height: 50%;
-    width: 100%;
-    background-color: dimgrey;
+
+ 
+    background-color:black;
     text-align: center;
     margin-top: 5%;
     /* b.container {
     /*  background-image: url(../img/white3.jpg);*/
-    height: 100%;
+    height: 70%;
     max-width: 1450px;
-    background-repeat: no-repeat;
-    background-size: 100%;
-  
+    
 }
 #landing {
     background-image: url(../img/arvid.jpg);
@@ -600,9 +598,9 @@ body {
 }
 .profile {}
 .footer {
-    height: 7%;
+    height: 10%;
     width: 100%;
-    background-color: white;
+    background-color: black;
     color: black;
 }
 
@@ -762,7 +760,7 @@ figure.snip1524.hover figcaption {
     background-color: white;
     width: 100%;
     text-align: center;
-/*    background-image: url(../img/portfolio2.jpg);*/
+    /*    background-image: url(../img/portfolio2.jpg);*/
     background-repeat: no-repeat;
     background-position: center;
     margin-top: 5%;
@@ -855,24 +853,33 @@ h1 {
         font-size: 10px;
     }
 }
-
 .buttonform {
     width:100px;
     background-color: black;
     color:white;
 }
-
 .form1 {
     padding-top: 30px;
 }
-
 .portfolio3 {
-     height: 50%;
+    height: 50%;
     background-color: white;
     width: 100%;
     text-align: center;
-/*    background-image: url(../img/portfolio2.jpg);*/
+    /*    background-image: url(../img/portfolio2.jpg);*/
     background-repeat: no-repeat;
     background-position: center;
     margin-top: 5%;
+}
+.twit {
+    text-align: center;
+}
+.gitblog {
+    text-align: center;
+}
+.linked {
+    text-align: center;
+}
+a {
+    color:white;
 }
