--- a/css/app.css
+++ b/css/app.css
@@ -26,16 +26,15 @@
     /* background-attachment: fixed;*/
 }
 .contacts {
-
- 
-    background-color:black;
+    background-color: black;
     text-align: center;
-    margin-top: 5%;
+    /*    margin-top: 5%;*/
     /* b.container {
     /*  background-image: url(../img/white3.jpg);*/
     height: 70%;
     max-width: 1450px;
-    
+    margin-top: 5px;
+    color:white;
 }
 #landing {
     background-image: url(../img/arvid.jpg);
@@ -62,13 +61,18 @@
     color: black;
     /*    background-attachment: fixed;*/
 }
+
+/*
 .contacts {
     height: 100%;
     width: 100%;
     background-color: dimgrey;
     text-align: center;
     margin-top: 5%;
-    /*
+*/
+
+
+/*
     background-image: url(../img/cup.jpg);
     background-attachment: fixed;
     background-repeat: no-repeat;
@@ -76,6 +80,8 @@
     background-size: cover;
     align-content: center;
 */
+
+
 }
 .portfolio {
     height: 50%;
@@ -310,7 +316,6 @@ h1 {
 }
 
 /* SECOND */
-
 .show-second img {
     transition: all 0.3s ease-in-out;
 }
@@ -359,7 +364,6 @@ h1 {
 }
 
 /* THIRD */
-
 .show-third a.more {
     display: inline-block;
     text-decoration: none;
@@ -420,7 +424,6 @@ h1 {
 }
 
 /* FOURTH */
-
 .show-fourth a.more {
     display: inline-block;
     text-decoration: none;
@@ -518,7 +521,6 @@ body {
 }
 
 /*added css to contact form*/
-
 $green: #84AD47;
 $red: #AD4747;
 $blue: #4784AD;
@@ -598,14 +600,13 @@ body {
 }
 .profile {}
 .footer {
-    height: 10%;
+    height: 20%;
     width: 100%;
     background-color: black;
     color: black;
 }
 
 /*contact form */
-
 form {
     width: 50%;
     margin: 10% auto;
@@ -667,7 +668,6 @@ textarea {
     }
 }
 */
-
 // Generic Styles ;)
 * {
     box-sizing: border-box;
@@ -680,7 +680,6 @@ textarea {
 }
 
 /*portfolio on hover*/
-
 figure.snip1524 {
     font-family: 'Josefin Sans', sans-serif;
     position: relative;
@@ -761,6 +760,7 @@ figure.snip1524.hover figcaption {
     width: 100%;
     text-align: center;
     /*    background-image: url(../img/portfolio2.jpg);*/
+    
     background-repeat: no-repeat;
     background-position: center;
     margin-top: 5%;
@@ -859,7 +859,7 @@ h1 {
     color:white;
 }
 .form1 {
-    padding-top: 30px;
+/*    padding-top: 30px;*/
 }
 .portfolio3 {
     height: 50%;
@@ -873,13 +873,24 @@ h1 {
 }
 .twit {
     text-align: center;
+    margin-top: 20px;
 }
 .gitblog {
     text-align: center;
+    margin-top: 20px;
 }
 .linked {
     text-align: center;
+    margin-top: 20px;
 }
 a {
     color:white;
+}
+
+.btncolor {
+    color:white;
+}
+
+.twyt {
+    margin-top: 20px;
 }
