--- a/css/app.css
+++ b/css/app.css
@@ -4,6 +4,7 @@
     max-width: 1450px;
     background-repeat: no-repeat;
     background-size: 100%;
+    margin-left: 0;
 }
 #landing {
     background-image: url(../img/arvid.jpg);
@@ -15,6 +16,8 @@
     margin: 0 auto;
     background-attachment: fixed;
     margin-right: 0;
+    margin-left: 0;
+/*    width:100%;*/
 }
 .skills {
     height: 70%;
@@ -99,6 +102,7 @@
     background-color: black;
     opacity: 0.7;
     color: white;
+    margin-left: 0;
 }
 .hey {}
 .pulse {
@@ -600,7 +604,7 @@ body {
 }
 .profile {}
 .footer {
-    height: 20%;
+    height: 30%;
     width: 100%;
     background-color: black;
     color: black;
@@ -673,7 +677,9 @@ textarea {
     box-sizing: border-box;
 }
 .intro {
-    margin-top: 5%;
+    margin-top: 300px;
+   
+    text-align: center;
 }
 .leftportfolio {
     margin-left: 2%;
@@ -877,7 +883,7 @@ h1 {
 }
 .gitblog {
     text-align: center;
-    margin-top: 20px;
+    margin-top: 30px;
 }
 .linked {
     text-align: center;
