--- a/css/app.css
+++ b/css/app.css
@@ -4,7 +4,7 @@
     max-width: 1450px;
     background-repeat: no-repeat;
     background-size: 100%;
-    margin-left: 0;
+    margin: 0;
 }
 #landing {
     background-image: url(../img/arvid.jpg);
@@ -34,7 +34,7 @@
     /*    margin-top: 5%;*/
     /* b.container {
     /*  background-image: url(../img/white3.jpg);*/
-    height: 70%;
+    height: 85%;
     max-width: 1450px;
     margin-top: 5px;
     color:white;
