--- a/css/app.css
+++ b/css/app.css
@@ -4,16 +4,16 @@
     max-width: 1450px;
     background-repeat: no-repeat;
     background-size: 100%;
-    margin: 0;
+    margin-left: 0;
 }
 #landing {
-    background-image: url(../img/arvid.jpg);
+/*    background-image: url(../img/arvid.jpg);*/
     height: 100%;
-    max-width: 1350px;
+    max-width: 1450px;
     background-repeat: no-repeat;
     background-size: 100%;
     text-align: center;
-    margin: 0 auto;
+    
     background-attachment: fixed;
     margin-right: 0;
     margin-left: 0;
@@ -87,6 +87,7 @@
 
 }
 .portfolio {
+    padding-top: 100px;
     height: 50%;
     background-color: white;
     width: 100%;
@@ -103,6 +104,7 @@
     opacity: 0.7;
     color: white;
     margin-left: 0;
+    text-align: left;
 }
 .hey {}
 .pulse {
@@ -210,7 +212,7 @@ h1 {
     text-align: center;
 }
 .row {
-    max-width: 1350px;
+/*    max-width: 1350px;*/
 }
 .more:link,
 .more:visited {
@@ -761,6 +763,7 @@ figure.snip1524.hover figcaption {
     transform: rotate(0);
 }
 .portfolio2 {
+padding-top: 100px;
     height: 50%;
     background-color: white;
     width: 100%;
@@ -868,7 +871,7 @@ h1 {
 /*    padding-top: 30px;*/
 }
 .portfolio3 {
-    height: 50%;
+    height: 40%;
     background-color: white;
     width: 100%;
     text-align: center;
