--- a/css/app.css
+++ b/css/app.css
@@ -871,7 +871,7 @@ h1 {
 /*    padding-top: 30px;*/
 }
 .portfolio3 {
-    height: 40%;
+    height: 50%;
     background-color: white;
     width: 100%;
     text-align: center;
@@ -899,6 +899,8 @@ a {
 
 .btncolor {
     color:white;
+    margin-top: 30px;
+    background-color: deeppink;
 }
 
 .twyt {
